# Docx_MCP_cj

./: .gitignore  202308764104+陈杰.docx  CHANGELOG.md  COMPLETE_USER_GUIDE.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  FINAL_SUMMARY.md  MANIFEST.in  PACKAGE_FIX_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PYPI_AUTH_SETUP.md  README.md  SUCCESS_REPORT.md  TROUBLESHOOTING.md  UPLOAD_GUIDE.md  demo_merged_system.py  final_complete_server.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_pypi_auth.bat  simple_test.py  test.py  test_hybrid.py  test_pypi_installation.py  upload_to_pypi.bat  upload_to_pypi.sh
.claude/: settings.local.json
backup_old_files/: README.md  main.py  simple_http_server.py
core/: __init__.py  ai_guidance_enhancer.py  ai_interface.py  docx_processor.py  enhanced_docx_processor.py  enhanced_state_manager.py  file_path_utils.py  fixed_docx_processor.py  font_processor.py  image_processor.py  intelligent_table_analyzer.py  intelligent_tool_planner.py  json_validation_engine.py  models.py  oss_processor.py  smart_suggestion_engine.py  state_machine.py  state_manager.py  table_structure_extractor.py  template_engine.py  universal_table_filler.py  workflow_engine.py
docs/: 202308764104+陈杰个人情况表填写示例.docx  ~$鉴定表A3打印_已填写完整.docx  光明大学专业实习优秀实习生登记表.docx  实习鉴定表A3打印_重新填写版.docx  小明的实习鉴定表A3打印.docx  附件11：岭南师范学院专业实习优秀实习生登记表.docx  附件11：岭南师范学院专业实习优秀实习生登记表_正确填写版.docx  附件7：岭南师范学院毕业（生产）实习鉴定表A3打印.docx  陈杰综合素质评价表_更新版.docx
examples/: mcp_enhancement_demo.py  oss_workflow_demo.py
state_data/: current_session.json
templates/academic/: academic_paper_simple.json
templates/business/: business_letter.json
tests/: __init__.py  comprehensive_image_test.py  comprehensive_test.py  run_all_tests.py  test_enhanced_processor.py  test_image_deletion.py  test_image_document.docx  test_image_extraction_and_movement.py  test_image_functionality.py  test_mcp_enhancements.py  test_merged_system.py  test_oss_workflow.py  test_row_insertion.py  test_universal_table_filler.py  verify_row_insertion.py
